log
Fri 24 Mar 2023 11:31:38 AM UTC: 
 tests:  0|6
total_score: 0/70
d1adedd
Fri 24 Mar 2023 11:48:38 AM UTC: 
 list.c | 8 ++++++--
 1 file changed, 6 insertions(+), 2 deletions(-)
In file included from test.c:5:
list.c: In function ‘createList’:
list.c:33:3: error: ‘lista’ undeclared (first use in this function); did you mean ‘Lista’?
   33 |   lista -> head=NULL;
      |   ^~~~~
      |   Lista
list.c:33:3: note: each undeclared identifier is reported only once for each function it appears in
list.c:32:10: error: unused variable ‘Lista’ [-Werror=unused-variable]
   32 |   List * Lista = (List *) malloc(sizeof(List));
      |          ^~~~~
list.c:37:1: error: control reaches end of non-void function [-Werror=return-type]
   37 | }
      | ^
cc1: all warnings being treated as errors
Compilation failed
a799f11
Fri 24 Mar 2023 11:48:51 AM UTC: 
 list.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  1|5
total_score: 10/70
2c1b8f4
Fri 24 Mar 2023 11:51:29 AM UTC: 
 list.c | 6 +++++-
 1 file changed, 5 insertions(+), 1 deletion(-)
 tests:  2|5
total_score: 15/70
b8282b0
Fri 24 Mar 2023 12:01:03 PM UTC: 
 list.c | 5 ++++-
 1 file changed, 4 insertions(+), 1 deletion(-)
 tests:  5|4
total_score: 25/70
804d36f
Fri 24 Mar 2023 12:07:04 PM UTC: 
 list.c | 5 ++++-
 1 file changed, 4 insertions(+), 1 deletion(-)
 tests:  6|4
total_score: 25/70
a12cdf8
Fri 24 Mar 2023 12:07:42 PM UTC: 
 list.c | 5 ++++-
 1 file changed, 4 insertions(+), 1 deletion(-)
 tests:  9|3
total_score: 35/70
b9ec224
Fri 24 Mar 2023 12:12:54 PM UTC: 
 list.c | 6 ++++++
 1 file changed, 6 insertions(+)
In file included from test.c:5:
list.c: In function ‘pushFront’:
list.c:74:7: error: ‘List’ {aka ‘struct List’} has no member named ‘size’
   74 |   list->size++;
      |       ^~
Compilation failed
f490ded
Fri 24 Mar 2023 12:14:33 PM UTC: 
 list.c | 1 +
 1 file changed, 1 insertion(+)
 tests:  9|3
total_score: 35/70
ae65fb5
Fri 24 Mar 2023 12:15:04 PM UTC: 
 list.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
In file included from test.c:5:
list.c: In function ‘pushFront’:
list.c:75:13: error: ‘Node’ has no member named ‘size’
   75 |   list->tail->size++;
      |             ^~
Compilation failed
b994012
Fri 24 Mar 2023 12:15:30 PM UTC: 
 list.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  9|3
total_score: 35/70
e94a9ea
Fri 24 Mar 2023 12:15:57 PM UTC: 
 list.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  9|3
total_score: 35/70
0d9514a
Fri 24 Mar 2023 12:19:02 PM UTC: 
 list.c | 3 ++-
 1 file changed, 2 insertions(+), 1 deletion(-)
 tests:  0|0
29d1e5e
Fri 24 Mar 2023 12:20:44 PM UTC: 
 list.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  9|3
total_score: 35/70
27a76c1
Fri 24 Mar 2023 12:21:00 PM UTC: 
 list.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  0|0
dce61e3
Fri 24 Mar 2023 12:21:18 PM UTC: 
 list.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  9|3
total_score: 35/70
f89bc21
Fri 24 Mar 2023 12:21:53 PM UTC: 
 list.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
In file included from test.c:5:
list.c: In function ‘pushFront’:
list.c:74:7: error: ‘List’ {aka ‘struct List’} has no member named ‘prev’
   74 |   list->prev=nuevo;
      |       ^~
Compilation failed
c2959db
Fri 24 Mar 2023 12:22:05 PM UTC: 
 list.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  9|3
total_score: 35/70
82723fb
Fri 24 Mar 2023 12:22:25 PM UTC: 
 list.c | 1 +
 1 file changed, 1 insertion(+)
In file included from test.c:5:
list.c: In function ‘pushFront’:
list.c:75:3: error: expected ‘;’ before ‘list’
   75 |   list->tail=nuevo;
      |   ^~~~
Compilation failed
c9697d6
Fri 24 Mar 2023 12:22:32 PM UTC: 
 list.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  9|3
total_score: 35/70
ef74f63
Fri 24 Mar 2023 12:22:47 PM UTC: 
 list.c | 3 ++-
 1 file changed, 2 insertions(+), 1 deletion(-)
 tests:  9|3
total_score: 35/70
194c24e
